# vibe_rtos

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Kconfig  README.md  vibe_os.yml
arch/: CMakeLists.txt  Kconfig
arch/arm/: CMakeLists.txt  Kconfig
arch/arm/cortex_m/: CMakeLists.txt  Kconfig
arch/arm/cortex_m/core/: context_switch.S  irq.c  mpu.c  startup.S
arch/arm/cortex_m/include/arch/arm/cortex_m/: arch.h
boards/arm/rpi_pico/: CMakeLists.txt  Kconfig.board  linker.ld  rpi_pico.dts  rpi_pico_defconfig
boards/arm/rpi_pico2/: CMakeLists.txt  Kconfig.board  linker.ld  rpi_pico2.dts  rpi_pico2_defconfig
cmake/: vibe_board_toolchain.cmake  vibe_rtos-config.cmake  vibe_rtos.cmake
cmake/modules/: dts.cmake  kconfig.cmake  yaml_config.cmake
cmake/toolchains/: arm-none-eabi.cmake  host-gcc.cmake
drivers/: CMakeLists.txt  Kconfig  drivers_dummy.c
drivers/adc/: CMakeLists.txt  Kconfig  adc.c
drivers/flash/: CMakeLists.txt  Kconfig  flash.c
drivers/gpio/: CMakeLists.txt  Kconfig  gpio.c
drivers/i2c/: CMakeLists.txt  Kconfig  i2c.c
drivers/rtc/: CMakeLists.txt  Kconfig  rtc.c
drivers/spi/: CMakeLists.txt  Kconfig  spi.c
drivers/timer/: CMakeLists.txt  Kconfig  timer.c
drivers/uart/: CMakeLists.txt  Kconfig  uart.c
drivers/watchdog/: CMakeLists.txt  Kconfig  watchdog.c
include/drivers/: adc.h  flash.h  gpio.h  i2c.h  rtc.h  spi.h  timer_hw.h  uart.h  watchdog.h
include/vibe/: arch.h  coredump.h  device.h  event.h  heap.h  irq.h  kernel.h  log.h  mem.h  msgq.h  mutex.h  pipe.h  sched.h  sem.h  spinlock.h  thread.h  timer.h  types.h  workq.h
include/vibe/sys/: list.h  printk.h  util.h
kernel/: CMakeLists.txt  Kconfig  event.c  idle.c  init.c  mem_pool.c  msgq.c  mutex.c  pipe.c  sched.c  sem.c  smp.c  spinlock.c  thread.c  timer.c  workq.c
lib/: CMakeLists.txt  Kconfig
lib/async/: Kconfig  async.h
lib/heap/: CMakeLists.txt  Kconfig  heap.c  heap_best_fit.c  heap_first_fit.c  heap_priv.h  heap_stub.c  heap_tlsf.c
lib/job_scheduler/: CMakeLists.txt  Kconfig  job_scheduler.c  job_scheduler.h  job_scheduler_stub.c
lib/ring_buffer/: CMakeLists.txt  Kconfig  ring_buffer.c  ring_buffer.h  ring_buffer_stub.c
samples/async_hello/: CMakeLists.txt  main.c
samples/async_pipeline/: CMakeLists.txt  main.c
samples/async_state_machine/: CMakeLists.txt  main.c
samples/blinky/: CMakeLists.txt  main.c
samples/hello_world/: CMakeLists.txt  main.c  vibe_config.yml
samples/threads/: CMakeLists.txt  main.c
scripts/: build.sh  debug.sh  flash.sh
scripts/feature_gen/: .gitignore  feature_gen.sh  features_gen.py
scripts/kconfig/: gen_configs.py
scripts/uf2/: uf2conv.py
soc/arm/raspberrypi/rp2040/: CMakeLists.txt  Kconfig.soc  soc.c  soc.h
soc/arm/raspberrypi/rp2350/: CMakeLists.txt  Kconfig.soc  soc.c  soc.h
subsys/: CMakeLists.txt  Kconfig
subsys/coredump/: CMakeLists.txt  Kconfig  coredump.c  coredump_arch_arm.c  coredump_shell.c
subsys/logging/: CMakeLists.txt  Kconfig  log.c
subsys/shell/: CMakeLists.txt  Kconfig  shell.c  shell.h
tests/: CMakeLists.txt
tests/kernel/: CMakeLists.txt  test_sched.c  test_sync.c  test_thread.c
